--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="game-style.css">
 </head>
 <body>
-    
+    <main id="root">
+        <h1>
+            Rock, paper and scissors
+        </h1>
+        <h3>
+            Choose between rock, paper or scissors:
+        </h3>
+    </main>
     <!-- Rock, paper and scissors game -->
     <script src="set-game.js"></script>
 </body>
