--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <h3>
             Choose between rock, paper or scissors:
         </h3>
+        <div class="buttons">
+            
+        </div>
+        <div class="results">
+
+        </div>
     </main>
     <!-- Rock, paper and scissors game -->
     <script src="set-game.js"></script>
