Rewrite the game code to fit with an UI

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         <div class="buttons">
             
         </div>
+        <div class="score">
+            <p id="human-score"></p>
+            <p id="pc-score"></p>
+        </div>
         <div class="results">
-
+            Results in here
         </div>
     </main>
     <!-- Rock, paper and scissors game -->
